<package>
  <name>ORB_SLAM</name>
  <version>0.1.0</version>
  <description>ORB_SLAM</description>
  <maintainer email="hoge@hoge.com">Raul Mur-Artal</maintainer>

  <license>GPLv3</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Raul Mur-Artal</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>opencv2</test_depend> -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->

</package>
